init api gateway
